Fixed text visibility in dark mode
- Fixes: #1406

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -101,6 +101,11 @@ p, address {
 	line-height: 1.4em;
 }
 
+ol {
+	color: var(--color-grey-light);
+	font-size: 1.1rem;
+}
+
 p.grey-bg-text{
 	color: var(--color-secondary-medium);
 }
